@@ -44,6 +44,10 @@
   - digit_sum/1
   - contains_digit?/2
   - remove_digits!/2
+  - is_rhonda_to_base?/2
+  - get_rhonda_to/2
+  - is_rhonda_to_base_*?/1 
+  - is_multiple_rhonda?/1
   
 ### Sequences
 
